--- a/ATBM_HTTT/ATBM_HTTT/ATBM_HTTT.csproj
+++ b/ATBM_HTTT/ATBM_HTTT/ATBM_HTTT.csproj
@@ -90,6 +90,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -102,6 +103,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connection.cs" />
+    <Compile Include="NhanVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NhanVien.Designer.cs">
+      <DependentUpon>NhanVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="PHANHE1\ROLE_USER_INFORMATION\DatabaseManager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,10 +121,10 @@
     <Compile Include="LOGIN\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainForm.cs">
+    <Compile Include="PHANHE1\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="PHANHE1\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="PHANHE1\PRIVILEGES\Privileges.cs">
@@ -171,13 +178,22 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QL_TrucTiep.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QL_TrucTiep.Designer.cs">
+      <DependentUpon>QL_TrucTiep.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="NhanVien.resx">
+      <DependentUpon>NhanVien.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PHANHE1\ROLE_USER_INFORMATION\DatabaseManager.resx">
       <DependentUpon>DatabaseManager.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LOGIN\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="PHANHE1\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PHANHE1\PRIVILEGES\Privileges.resx">
@@ -213,6 +229,9 @@
     <EmbeddedResource Include="PHANHE1\ROLE_OPTIONS\USERS_ROLES.resx">
       <DependentUpon>USERS_ROLES.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="QL_TrucTiep.resx">
+      <DependentUpon>QL_TrucTiep.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Oracle.DataAccess.Common.Configuration.Section.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -234,8 +253,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="BUS\" />
-    <Folder Include="GUI\" />
     <Folder Include="PHANHE2\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
