--- a/ATBM_HTTT/ATBM_HTTT/ATBM_HTTT.csproj
+++ b/ATBM_HTTT/ATBM_HTTT/ATBM_HTTT.csproj
@@ -220,11 +220,17 @@
     <Compile Include="NHANSU\ThemNhanVien.Designer.cs">
       <DependentUpon>ThemNhanVien.cs</DependentUpon>
     </Compile>
-    <Compile Include="TaiChinh.cs">
+    <Compile Include="TAICHINH\TaiChinh.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TaiChinh.Designer.cs">
+    <Compile Include="TAICHINH\TaiChinh.Designer.cs">
       <DependentUpon>TaiChinh.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TEST.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TEST.Designer.cs">
+      <DependentUpon>TEST.cs</DependentUpon>
     </Compile>
     <Compile Include="TRUONGDEAN\ThemDeAn.cs">
       <SubType>Form</SubType>
@@ -250,10 +256,10 @@
     <Compile Include="TRUONGPHONG\XuLyPhanCong.Designer.cs">
       <DependentUpon>XuLyPhanCong.cs</DependentUpon>
     </Compile>
-    <Compile Include="TRUONGDEAN\Xoa_SuaDeAn.cs">
+    <Compile Include="Xoa_SuaDeAn.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TRUONGDEAN\Xoa_SuaDeAn.Designer.cs">
+    <Compile Include="Xoa_SuaDeAn.Designer.cs">
       <DependentUpon>Xoa_SuaDeAn.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="NHANSU\CapNhatNhanvien.resx">
@@ -323,8 +329,11 @@
     <EmbeddedResource Include="NHANSU\ThemNhanVien.resx">
       <DependentUpon>ThemNhanVien.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TaiChinh.resx">
+    <EmbeddedResource Include="TAICHINH\TaiChinh.resx">
       <DependentUpon>TaiChinh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TEST.resx">
+      <DependentUpon>TEST.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TRUONGDEAN\ThemDeAn.resx">
       <DependentUpon>ThemDeAn.cs</DependentUpon>
@@ -338,7 +347,7 @@
     <EmbeddedResource Include="TRUONGPHONG\XuLyPhanCong.resx">
       <DependentUpon>XuLyPhanCong.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TRUONGDEAN\Xoa_SuaDeAn.resx">
+    <EmbeddedResource Include="Xoa_SuaDeAn.resx">
       <DependentUpon>Xoa_SuaDeAn.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Oracle.DataAccess.Common.Configuration.Section.xsd">
